# ROS

./: gls_lla_to_utm.cpp  teleop.py
20240112/my_second_pkg/scripts/: multiplication_table.ui
20240112/my_second_pkg/src/: operator_node.cpp
20240112/turtle_pose/: CMakeLists.txt  package.xml
20240112/turtle_pose/src/: turtle_pose_node.cpp
Engineering_math/Gaussian_Elimiation/: Gaussian_Elimiation.cpp  Makefile  test
Pioneer_control/: CMakeLists.txt  package.xml
Pioneer_control/launch/: pioneer_control.launch
Pioneer_control/src/: pioneer_control.cpp
aeb_control/: CMakeLists.txt  package.xml
aeb_control/src/: aeb_control_node.cpp  aeb_controller_node.cpp
cmd_vel_mux/: CMakeLists.txt  package.xml
cmd_vel_mux/launch/: cmd_vel_mux.launch
cmd_vel_mux/src/: cmd_vel_mux_node.cpp
gps_heaing_angle/: CMakeLists.txt  package.xml
gps_heaing_angle/src/: gps_heading_angle.cpp
gugudan/: CMakeLists.txt  package.xml
gugudan/src/: gugudan_publisher.cpp  gugudan_subscriber.cpp  publisher.cpp  subscriber.cpp
imu_correction/: CMakeLists.txt  package.xml
imu_correction/src/: imu_correction_node.cpp
imu_rpy/: CMakeLists.txt  package.xml
imu_rpy/launch/: imu_rpy.launch
imu_rpy/src/: imu_rpy.cpp
line_camera_sim/: CMakeLists.txt  package.xml
line_camera_sim/src/: line_camera_topic.cpp
line_control/: CMakeLists.txt  package.xml
line_control/launch/: line_control.launch
line_control/src/: line_control_node.cpp
mando/GPS_GUI/scripts/: 1  gps_test.ui  gps_ui.py  ros-gui1_new.py  test.txt  test1.txt  test2.txt  waypoints_data(영남대학교).txt
mando/ROS-UTM-LLA/launch/: coordinate_convertion.launch  dual_gps_coordinate_convertion.launch
mando/ROS-UTM-LLA/src/: convert_ndt2lla.cpp
mando/Waypoint_Control/: waypoints_navigation_node_old.cpp
mando/Waypoint_Control/car_yaw_control/: CMakeLists.txt  package.xml
mando/Waypoint_Control/car_yaw_control/launch/: car_yaw_control.launch
mando/Waypoint_Control/car_yaw_control/src/: car_yaw_control.cpp
mando/Waypoint_Control/waypoints_move/: CMakeLists.txt  package.xml
mando/can_control/: CMakeLists.txt  package.xml
mando/can_control/launch/: can_control.launch
mando/can_control/scripts/: steering_sine_test.py
mando/gps_datum_pub/launch/: gps_datum.launch
mando/gps_datum_pub/src/: gps_datum_pub.cpp
mando/gps_imu_link/: CMakeLists.txt  package.xml
mando/gps_imu_link/launch/: gps_imu_link.launch  gps_imu_link_new.launch
mando/gps_imu_link/src/: gps_imu_link.cpp  gps_imu_link_new.cpp  gps_imu_link_test.cpp  gps_yaw_estimation.cpp
mando/gps_msgs_package/launch/: gps_msgs_package.launch
mando/gps_msgs_package/rviz/: gps_package.rviz
mando/gps_msgs_package/src/: gps_msgs_package.cpp
mando/gps_odom/: CMakeLists.txt  package.xml
mando/gps_odom/config/: gps_imu.yaml
mando/gps_odom/launch/: navsat_test.launch  utm_odom.launch
mando/gps_odom/rviz/: utm_odom.rviz
mando/gps_odom/scripts/: odom_path_node1.py  odom_path_node2.py
mando/gps_odom/src/: utm_odom.cpp
mando/gps_package_launch/: CMakeLists.txt  package.xml
mando/gps_package_launch/launch/: frame_tf.launch  gps_pack.launch  gps_pack1.launch  mgi_2000_gps_pack.launch
mando/handsfree_ros_imu_a9_new/launch/: handsfree_imu_a9.launch  rviz_and_imu.launch  rviz_and_imu_a9.launch
mando/m_car/m_car_encoder_serial/: CMakeLists.txt  package.xml
mando/m_car/m_car_encoder_serial/launch/: henes_car_control_Serial_odom.launch
mando/m_car/m_car_encoder_serial/scripts/: encoder_odom_path_node.py  gps_can_control_node.py
mando/m_car/m_car_encoder_serial/src/: henes_car_control_serial_node.cpp  teleop.py
mando/m_car/m_car_encoder_serial/urdf/: my_car2.urdf
mando/move_base/: CMakeLists.txt  package.xml
mando/move_base/launch/: kobuki_amcl.launch  kobuki_nav.launch  kobuki_nav1.launch  move_nav.launch  uni_car_navi.launch
mando/move_base/maps/: map_house.pgm  map_track.pgm  map_track.yaml  map_world.pgm  map_world.yaml  room1_map.yaml
mando/move_base/param/: _costmap_common_params.yaml  _global_costmap_params.yaml  _global_planner_params.yaml  _local_costmap_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  (+4 more)
mando/waypoints_rviz_display/: CMakeLists.txt  package.xml
math/: Makefile  test  vector1.cpp
move_waypoint/: CMakeLists.txt  package.xml
move_waypoint/src/: move_waypoint_node.cpp
my_second_pkg/scripts/: multi_gui.py
one_fifith/: r
one_fifith/Vision/ros_lane_control/: CMakeLists.txt
one_fifith/Vision/ros_lane_control/launch/: ros_lane_control -kcity.launch  ros_lane_control.launch
one_fifith/Vision/ros_lane_control/src/: ros_lane_control _20231007.cpp  ros_lane_control.cpp
one_fifith/can_tr/: CMakeLists.txt  package.xml
one_fifith/can_tr/scripts/: can_gps.py  can_gps_2.py  can_tr.py
one_fifith/can_tr/src/: can_tr_node.cpp
opencv_line_detection/: CMakeLists.txt  package.xml
opencv_line_detection/rviz/: image.rviz
opencv_line_detection/src/: opencv_line_detect_image_topic.cpp  opencv_line_detection.cpp
pioneer/: CMakeLists.txt  package.xml  pionner.webm
pioneer/src/: pioneer_node.cpp
recursive_average_filta/: CMakeLists.txt  package.xml
recursive_average_filta/src/: recursive_average_filta_node.cpp
ros_operator/: CMakeLists.txt
ros_operator/src/: operator_node.cpp
src/: 로봇시뮬레이터개발응용_5차시.odp
src/my_first_pkg/: CMakeLists.txt  package.xml
src/my_first_pkg/launch/: my_first_launch.launch
src/my_second_pkg/: CMakeLists.txt  package.xml
thread/hw1/: Makefile.txt  hw1.cpp  test
thread/hw2/: hw2.cpp
wall_following/: CMakeLists.txt  package.xml
wall_following/src/: wall_following_node.cpp
waypoint_control_system/: CMakeLists.txt  package.xml
waypoint_control_system/data/: waypoint1.txt
waypoint_control_system/launch/: move_waypoint.launch
waypoint_control_system/msg/: Target_waypoint_line.msg
waypoint_control_system/src/: waypoint_control_system_node.cpp
yaw_control/: CMakeLists.txt  package.xml
yaw_control/launch/: yaw_control.launch
yaw_control/src/: yaw_control_node.cpp
공업수학/minor determinant/: Makefile  minor_determinant.cpp  test
(+83 files in other folders)
